--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_BR.json
@@ -672,7 +672,7 @@
     "MessageForgotPasswordFileCreated": "O seguinte arquivo foi criado no seu servidor e cont\u00e9m instru\u00e7\u00f5es de como proceder:",
     "MessageForgotPasswordFileExpiration": "O c\u00f3digo para redefini\u00e7\u00e3o expirar\u00e1 \u00e0s {0}.",
     "MessageInvalidForgotPasswordPin": "Foi digitado um c\u00f3digo inv\u00e1lido ou expirado. Por favor, tente novamente.",
-    "MessagePasswordResetForUsers": "Foram redefinidas as senhas dos seguintes usu\u00e1rios:",
+    "MessagePasswordResetForUsers": "Foram removidas as senhas dos seguintes usu\u00e1rios:",
     "HeaderInviteGuest": "Convidar Usu\u00e1rio",
     "ButtonLinkMyMediaBrowserAccount": "Conectar minha conta agora",
     "MessageConnectAccountRequiredToInviteGuest": "Para convidar usu\u00e1rios voc\u00ea necessita primeiro conectar sua conta Media Browser com este servidor.",
