--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/pt_PT.json
@@ -14,7 +14,7 @@
     "FileReadError": "Ocorreu um erro ao ler o ficheiro.",
     "DeleteUser": "Apagar Utilizador",
     "DeleteUserConfirmation": "Tem a certeza que deseja apagar este utilizador?",
-    "PasswordResetHeader": "Redefinir Senha",
+    "PasswordResetHeader": "Reset Password",
     "PasswordResetComplete": "A senha foi redefinida.",
     "PinCodeResetComplete": "The pin code has been reset.",
     "PasswordResetConfirmation": "Tem a certeza que deseja redefinir a senha?",
@@ -672,7 +672,7 @@
     "MessageForgotPasswordFileCreated": "The following file has been created on your server and contains instructions on how to proceed:",
     "MessageForgotPasswordFileExpiration": "The reset pin will expire at {0}.",
     "MessageInvalidForgotPasswordPin": "An invalid or expired pin was entered. Please try again.",
-    "MessagePasswordResetForUsers": "Passwords have been reset for the following users:",
+    "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
     "HeaderInviteGuest": "Invite Guest",
     "ButtonLinkMyMediaBrowserAccount": "Link my account now",
     "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Media Browser account to this server.",
