--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/sv.json
@@ -14,7 +14,7 @@
     "FileReadError": "Ett fel intr\u00e4ffade vid inl\u00e4sningen av filen.",
     "DeleteUser": "Ta bort anv\u00e4ndare",
     "DeleteUserConfirmation": "\u00c4r du s\u00e4ker p\u00e5 att du vill radera denna anv\u00e4ndare?",
-    "PasswordResetHeader": "\u00c5terst\u00e4ll l\u00f6senordet",
+    "PasswordResetHeader": "Reset Password",
     "PasswordResetComplete": "L\u00f6senordet har \u00e5terst\u00e4llts.",
     "PinCodeResetComplete": "The pin code has been reset.",
     "PasswordResetConfirmation": "\u00c4r du s\u00e4ker p\u00e5 att du vill \u00e5terst\u00e4lla l\u00f6senordet?",
@@ -672,7 +672,7 @@
     "MessageForgotPasswordFileCreated": "The following file has been created on your server and contains instructions on how to proceed:",
     "MessageForgotPasswordFileExpiration": "The reset pin will expire at {0}.",
     "MessageInvalidForgotPasswordPin": "An invalid or expired pin was entered. Please try again.",
-    "MessagePasswordResetForUsers": "Passwords have been reset for the following users:",
+    "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
     "HeaderInviteGuest": "Invite Guest",
     "ButtonLinkMyMediaBrowserAccount": "Link my account now",
     "MessageConnectAccountRequiredToInviteGuest": "In order to invite guests you need to first link your Media Browser account to this server.",
