--- a/MediaBrowser.Server.Implementations/Localization/Server/de.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/de.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Aktiviere Videobild-Extrahierung",
     "VideoImageExtractionHelp": "F\u00fcr Videos die noch keien Bilder haben, und f\u00fcr die wir keine Internetbilder finden k\u00f6nnen. Hierdurch wird der erste Bibliothekenscan etwas mehr Zeit beanspruchen, f\u00fchrt aber zu einer ansprechenderen Pr\u00e4sentation.",
     "LabelEnableChapterImageExtractionForMovies": "Extrahiere Kapitelbilder f\u00fcr Filme",
-    "LabelChapterImageExtractionForMoviesHelp": "Das Auslesen von Kapitelbildern erlaubt es den Clients grafische Szenenauswahlmen\u00fcs anzuzeigen. Der Prozess kann langsam, prozessorintensiv sein und mehrere Gigabyte an Speicherplatz erfordern. Er wird nachts um 4:00 Uhr als geplante Aufgabe ausgef\u00fchrt, dies l\u00e4sst sich im \"Geplante Aufgaben\" Bereich konfigurieren. Es ist nicht ratsam, diese Aufgabe in der Hauptbelastungszeit auszuf\u00fchren.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Aktiviere automatische Portweiterleitung",
     "LabelEnableAutomaticPortMappingHelp": "UPnP erm\u00f6glicht die automatische Routerkonfiguration f\u00fcr den einfachen Remote-Zugriff. Diese Option ist nicht f\u00fcr jeden Router verf\u00fcgbar.",
     "HeaderTermsOfService": "Nutzungsbedingungen",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Falls aktviert, werden Bilder die unter TheTVDB.com neu hinzugef\u00fcgt wurden, automatisch geladen. Vorhandene Bilder werden nicht ersetzt.",
     "LabelFanartApiKey": "Pers\u00f6nlicher API Schl\u00fcssel:",
     "LabelFanartApiKeyHelp": "Fanart Anfragen ohne einen pers\u00f6nlichen API Schl\u00fcssel liefert Ergebnisse der letzten 7 Tage. Bei Verwendung eines pers\u00f6nlichen API Schl\u00fcssels werden Ergebnisse der letzten 48 Stunden, und als VIP Member, der letzten 10 Minuten geliefert.",
-    "ExtractChapterImagesHelp": "Das Auslesen von Kapitelbildern erlaubt es den Clients grafische Szenenauswahlmen\u00fcs anzuzeigen. Der Prozess kann langsam sowie prozessorintensiv sein und kann mehrere Gigabyte an Speicherplatz erfordern. Er wird nachts um 4:00 Uhr als geplante Aufgabe ausgef\u00fchrt, dies l\u00e4sst sich im \"Geplante Aufgaben\" Bereich konfigurieren. Es ist nicht ratsam, diese Aufgabe in der Hauptbelastungszeit auszuf\u00fchren.",
+    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "Bevorzugte Sprache f\u00fcr Downloads:",
     "ButtonAutoScroll": "Auto-scroll",
     "LabelImageSavingConvention": "Speicherconvention der Bilddatein:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Lade Untertitel runter f\u00fcr",
     "MessageNoChapterProviders": "Installiere ein Plugin f\u00fcr Kapitelinhalte, wie beispielsweise ChapterDb, um weitere Optionen f\u00fcr Kapitel zu erhalten.",
     "LabelSkipIfGraphicalSubsPresent": "\u00dcberspringen, falls das Video bereits grafische Untertitel enth\u00e4lt",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Die Beibehaltung von Textversionen der Untertitel ist effizienter f\u00fcr die \u00dcbermittlung an mobile Endger\u00e4te.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
     "TabSubtitles": "Untertitel",
     "TabChapters": "Kapitel",
     "HeaderDownloadChaptersFor": "Lade Kapitelnamen herunter f\u00fcr:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Protokoll Information:",
     "LabelProtocolInfoHelp": "Der Wert, der f\u00fcr die Beantwortung von GetProtocolInfo Anfragen durch die Endger\u00e4te benutzt wird.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser bietet eine native Unterst\u00fctzung f\u00fcr Kodi NFO Metadaten und Bilder. Um Kodi Metadaten zu aktivieren oder zu deaktivieren und um Optionen f\u00fcr deine Medientypen zu konfigurieren, verwende die Registerkarte Erweitert.",
+    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
     "LabelKodiMetadataUser": "Synchronisiere den \"Gesehen\" Status von Benutzern in NFO's f\u00fcr:",
-    "LabelKodiMetadataUserHelp": "Aktiviere diese Option, um den \"Gesehen\" Status zwischen Media Browser und Kodi synchron zu halten.",
+    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
     "LabelKodiMetadataDateFormat": "Ver\u00f6ffentlichungsdatum Format:",
     "LabelKodiMetadataDateFormatHelp": "Alle Daten in den NFO's werde unter Benutzung dieses Format gelesen und geschrieben.",
     "LabelKodiMetadataSaveImagePaths": "Speicher Bildpfade innerhalb der NFO Dateien",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Beispiel: srt",
     "ButtonLearnMore": "Erfahre mehr",
     "TabPlayback": "Wiedergabe",
-    "HeaderTrailersAndExtras": "Trailers & Extras",
-    "OptionFindTrailers": "Finde Trailer automatisch \u00fcber das Internet",
     "HeaderLanguagePreferences": "Spracheinstellungen",
     "TabCinemaMode": "Kino-Modus",
     "TitlePlayback": "Wiedergabe",
