--- a/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/es_MX.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Habilitar extracci\u00f3n de im\u00e1genes de video",
     "VideoImageExtractionHelp": "Para videos que no cuenten con im\u00e1genes, y para los que no podemos encontrar im\u00e1genes en Internet. Esto incrementar\u00e1 un poco el tiempo de la exploraci\u00f3n inicial de las bibliotecas, pero resultar\u00e1 en una presentaci\u00f3n m\u00e1s agradable.",
     "LabelEnableChapterImageExtractionForMovies": "Extraer im\u00e1genes de cap\u00edtulos para Pel\u00edculas",
-    "LabelChapterImageExtractionForMoviesHelp": "Extraer im\u00e1genes de cap\u00edtulos permite a los clientes mostrar men\u00fas gr\u00e1ficos de selecci\u00f3n de escenas. El proceso puede ser lento, intensivo en utilizaci\u00f3n del CPU y puede requerir varios gigabytes de espacio. Se ejecuta como una tarea nocturna, programada a las 4 de la ma\u00f1ana, aunque esto se puede configurar en el \u00e1rea de tareas programadas. No se recomienda ejecutar esta tarea durante las horas pico de uso.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Habilitar mapeo autom\u00e1tico de puertos",
     "LabelEnableAutomaticPortMappingHelp": "UPnP permite la configuraci\u00f3n de ruteador de manera autom\u00e1tica, para acceso remoto de manera f\u00e1cil. Eso puede no funcionar con algunos modelos de ruteadores.",
     "HeaderTermsOfService": "T\u00e9rminos del Servicio de Media Browser",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Al habilitarlo, se descargar\u00e1n autom\u00e1ticamente nuevas im\u00e1genes conforme son a\u00f1adidas a TheTVDB.com. Las im\u00e1genes existentes no ser\u00e1n reemplazadas.",
     "LabelFanartApiKey": "Clave api personal:",
     "LabelFanartApiKeyHelp": "Solicitar fanart sin una clave API personal muestra los resultados que fueron aprobados hace 7 d\u00edas. Con una clave API personal se reduce a 48 horas y si eres miembro VIP de fanart ser\u00e1 alrededor de 10 minutos.",
-    "ExtractChapterImagesHelp": "Extraer im\u00e1genes de cap\u00edtulos permite a los clientes mostrar men\u00fas gr\u00e1ficos de selecci\u00f3n de escenas. El proceso puede ser lento, intensivo en utilizaci\u00f3n del CPU y puede requerir varios gigabytes de espacio. Se ejecuta cuando se detectan nuevos videos, tambi\u00e9n como una tarea nocturna, programada a las 4:00 am. La programaci\u00f3n puede configurarse en el \u00e1rea de tareas programadas. No se recomienda ejecutar esta tarea durante horas pico de uso.",
+    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "Lenguaje preferido para descargas:",
     "ButtonAutoScroll": "Auto-desplazamiento",
     "LabelImageSavingConvention": "Convenci\u00f3n de almacenamiento de im\u00e1genes:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Descargar subt\u00edtulos para:",
     "MessageNoChapterProviders": "Instale un complemento proveedor de cap\u00edtulos como ChapterDb para habilitar opciones adicionales de cap\u00edtulos.",
     "LabelSkipIfGraphicalSubsPresent": "Omitir si el video ya contiene subt\u00edtulos gr\u00e1ficos",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Mantener versiones de texto de los subt\u00edtulos resultar\u00e1 en una entrega m\u00e1s eficiente para clientes m\u00f3viles.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
     "TabSubtitles": "Subt\u00edtulos",
     "TabChapters": "Cap\u00edtulos",
     "HeaderDownloadChaptersFor": "Descargar nombres de cap\u00edtulos para:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Informaci\u00f3n del protocolo:",
     "LabelProtocolInfoHelp": "El valor que ser\u00e1 utilizado cuando se responde a solicitudes GetProtocolInfo desde el dispositivo.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser incluye soporte nativo para metadados NFO e im\u00e1genes de Kodi. Para activar o desactivar metadatos de Kodi, utilice la pesta\u00f1a Avanzado para configurar opciones para sus tipos de medios.",
+    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
     "LabelKodiMetadataUser": "Sincronizar informaci\u00f3n de vistos a nfo's para:",
-    "LabelKodiMetadataUserHelp": "Habilitar esto para mantener monitoreo de datos en sincron\u00eda entre Media Browser y Kodi.",
+    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
     "LabelKodiMetadataDateFormat": "Formato de fecha de estreno:",
     "LabelKodiMetadataDateFormatHelp": "Todas las fechas en los nfo\u00b4s ser\u00e1n le\u00eddas y escritas utilizando este formato.",
     "LabelKodiMetadataSaveImagePaths": "Guardar trayectorias de im\u00e1genes en los archivos nfo",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Ejemplo: srt",
     "ButtonLearnMore": "Aprenda m\u00e1s",
     "TabPlayback": "Reproducci\u00f3n",
-    "HeaderTrailersAndExtras": "Avances & Extras",
-    "OptionFindTrailers": "Buscar avances desde internet autom\u00e1ticamente",
     "HeaderLanguagePreferences": "Preferencias de Lenguaje",
     "TabCinemaMode": "Modo Cine",
     "TitlePlayback": "Reproducci\u00f3n",
