--- a/MediaBrowser.Server.Implementations/Localization/Server/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/fr.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Activer l'extraction d'images des videos",
     "VideoImageExtractionHelp": "Pour les vid\u00e9os sans image et pour lesquelles nous n'avons pas trouv\u00e9 d'images sur Internet. Ce processus prolongera la mise \u00e0 jour initiale de la biblioth\u00e8que mais offrira un meilleur rendu visuel.",
     "LabelEnableChapterImageExtractionForMovies": "Extraire les images de chapitres des films",
-    "LabelChapterImageExtractionForMoviesHelp": "L'extraction d'images de chapitres permettra aux clients d'afficher des menus visuels pour la s\u00e9lection des sc\u00e8nes. Le processus peut \u00eatre long et consommateur de ressources du processeur et de stockage (plusieurs gigaoctets). Il s'ex\u00e9cute par d\u00e9faut comme t\u00e2che programm\u00e9e \u00e0 4:00 (AM) mais son param\u00e9trage peut \u00eatre modifi\u00e9 dans les options des t\u00e2ches programm\u00e9es. Il est d\u00e9conseill\u00e9 d'ex\u00e9cuter cette t\u00e2che durant les heures d'utilisation normales.",
+    "LabelChapterImageExtractionForMoviesHelp": "L'extraction d'images de chapitres permettra aux clients d'afficher des menus visuels pour la s\u00e9lection des sc\u00e8nes. Le processus peut \u00eatre long et consommateur de ressources du processeur et de stockage (plusieurs gigaoctets). Il s'ex\u00e9cute comme t\u00e2che programm\u00e9e mais son param\u00e9trage peut \u00eatre modifi\u00e9 dans les options des t\u00e2ches programm\u00e9es. Il est d\u00e9conseill\u00e9 d'ex\u00e9cuter cette t\u00e2che durant les heures d'utilisation normales.",
     "LabelEnableAutomaticPortMapping": "Activer la configuration automatique de port",
     "LabelEnableAutomaticPortMappingHelp": "UPnP permet la configuration automatique des routeurs pour un acc\u00e8s \u00e0 distance facile. Ceci peut ne pas fonctionner sur certains mod\u00e8les de routeur.",
     "HeaderTermsOfService": "Conditions d'utilisation de Media Browser",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Si activ\u00e9, les nouvelles images seront t\u00e9l\u00e9charg\u00e9es automatiquement lorsqu'elles sont ajout\u00e9es dans TheTVDB.com. Les images existantes ne seront pas remplac\u00e9es.",
     "LabelFanartApiKey": "Cl\u00e9 d'api personnelle :",
     "LabelFanartApiKeyHelp": "Les requ\u00eates de fanart sans cl\u00e9 d'api personnelle renvoient des r\u00e9sultats approuv\u00e9s il y a plus de 7 jours. Avec une cl\u00e9 d'api personnelle,  cette valeur tombe \u00e0 48 heures, et si vous \u00eates aussi membre fanart VIP, cette valeur tombera encore plus, \u00e0 environ 10 minutes.",
-    "ExtractChapterImagesHelp": "L'extraction d'images de chapitre permettra aux clients d'afficher des menus visuels pour la s\u00e9lection des sc\u00e8nes. Le processus peut \u00eatre long et consommateur de ressources processeur et peut n\u00e9cessiter de nombreux gigaoctets de stockage. Il s'ex\u00e9cute quand des vid\u00e9os sont d\u00e9couvertes et \u00e9galement comme t\u00e2che planifi\u00e9e \u00e0 4:00 (AM). La planification peut \u00eatre modifi\u00e9e dans les options du planificateur de tache. Il n'est pas conseill\u00e9 d'ex\u00e9cuter cette t\u00e2che pendant les heures d'usage intensif.",
+    "ExtractChapterImagesHelp": "L'extraction d'images de chapitre permettra aux clients d'afficher des menus visuels pour la s\u00e9lection des sc\u00e8nes. Le processus peut \u00eatre long et consommateur de ressources processeur et peut n\u00e9cessiter de nombreux gigaoctets de stockage. Il s'ex\u00e9cute quand des vid\u00e9os sont d\u00e9couvertes et \u00e9galement comme t\u00e2che planifi\u00e9e. La planification peut \u00eatre modifi\u00e9e dans les options du planificateur de tache. Il n'est pas conseill\u00e9 d'ex\u00e9cuter cette t\u00e2che pendant les heures d'usage intensif.",
     "LabelMetadataDownloadLanguage": "Langue de t\u00e9l\u00e9chargement pr\u00e9f\u00e9r\u00e9e:",
     "ButtonAutoScroll": "D\u00e9filement automatique",
     "LabelImageSavingConvention": "Convention de sauvegarde des images:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "T\u00e9l\u00e9charger les sous-titres pour :",
     "MessageNoChapterProviders": "Installer un plugin de fournisseur de chapitre tel que ChapterDb pour activer les options suppl\u00e9mentaires de chapitre.",
     "LabelSkipIfGraphicalSubsPresent": "Sauter la vid\u00e9o si elle contient d\u00e9j\u00e0 des sous-titres graphiques",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Conserver les versions textes des sous-titres sera plus efficace sur les appareils mobiles.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Conserver les versions textes des sous-titres permettra une diffusion plus efficace et diminuera la probabilit\u00e9 d'un transcodage de la vid\u00e9o.",
     "TabSubtitles": "Sous-titres",
     "TabChapters": "Chapitres",
     "HeaderDownloadChaptersFor": "T\u00e9l\u00e9charger les noms de chapitre pour:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Infos sur le protocole:",
     "LabelProtocolInfoHelp": "La valeur qui sera utilis\u00e9e pour r\u00e9pondre aux requ\u00eates GetProtocolInfo du p\u00e9riph\u00e9rique.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser supporte nativement les m\u00e9tadonn\u00e9es Nfo et les images de Kodi. Pour activer ou d\u00e9sactiver les m\u00e9tadonn\u00e9es Kodi, utiliser l'onglet Avanc\u00e9 pour configurer les options de vos types de m\u00e9dias.",
+    "HeaderKodiMetadataHelp": "Media Browser supporte nativement les m\u00e9tadonn\u00e9es Nfo. Pour activer ou d\u00e9sactiver les m\u00e9tadonn\u00e9es Nfo, veuillez utiliser l'onglet Avanc\u00e9 pour configurer les options de vos types de m\u00e9dias.",
     "LabelKodiMetadataUser": "Synchroniser les donn\u00e9es de visionnage utilisateur en nfo pour :",
-    "LabelKodiMetadataUserHelp": "Activez cette option pour garder les donn\u00e9es de visionnage synchronis\u00e9es entre Media Browser et Kodi.",
+    "LabelKodiMetadataUserHelp": "Activez cette option pour garder les donn\u00e9es de visionnage synchronis\u00e9es entre Media Browser et Nfo.",
     "LabelKodiMetadataDateFormat": "Format de la date de sortie :",
     "LabelKodiMetadataDateFormatHelp": "Toutes les dates du nfo seront lues et \u00e9crites en utilisant ce format.",
     "LabelKodiMetadataSaveImagePaths": "Sauvegarder le chemin des images dans les fichiers nfo",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Exemple: srt",
     "ButtonLearnMore": "En savoir plus",
     "TabPlayback": "Lecture",
-    "HeaderTrailersAndExtras": "Bandes-annonces et extras",
-    "OptionFindTrailers": "Rechercher automatiquement les bandes-annonces sur Internet",
     "HeaderLanguagePreferences": "Pr\u00e9f\u00e9rences de langue",
     "TabCinemaMode": "Mode cin\u00e9ma",
     "TitlePlayback": "Lecture",
