--- a/MediaBrowser.Server.Implementations/Localization/Server/it.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/it.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Abilita estrazione immagine video",
     "VideoImageExtractionHelp": "Per i video che sono sprovvisti di immagini, e per i quali non siamo riusciti a trovare immagini su Internet.Questo aggiunger\u00e0 del tempo addizionale alla scansione della tua libreria ma si tradurr\u00e0 in una presentazione pi\u00f9 piacevole.",
     "LabelEnableChapterImageExtractionForMovies": "Estrazione immagine capitolo estratto per i Film",
-    "LabelChapterImageExtractionForMoviesHelp": "L'Estrazione di immagini capitoli permetter\u00e0 ai client di visualizzare i menu di selezione delle scene . Il processo pu\u00f2 essere lento e pu\u00f2 richiedere diversi gigabyte di spazio. Viene programmato alle 04:00, anche se questo \u00e8 configurabile nella sezione operazioni pianificate. Non \u00e8 consigliabile eseguire questa operazione durante le ore di massimo utilizzo",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Abilita mappatura delle porte automatiche",
     "LabelEnableAutomaticPortMappingHelp": "UPnP consente la configurazione automatica del router per l'accesso remoto facile. Questo potrebbe non funzionare con alcuni modelli di router.",
     "HeaderTermsOfService": "Termini di servizio di Media Browser",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Se abilitato le nuove immagini verranno scaricate automaticamente da TheTvDB.com. Le immagini esistenti non verranno sovrascritte.",
     "LabelFanartApiKey": "Chiavi API personali",
     "LabelFanartApiKeyHelp": "I risultati di richieste per fanart senza una chiave API personale che sono state approvate pi\u00f9 di 7 giorni fa. Con una chiave API personale questo tempo scende a 48 ore, e se sei un membro VIP scender\u00e0 ulteriormente a circa 10 minuti.",
-    "ExtractChapterImagesHelp": "Estrazione di immagini dai capitoli permetter\u00e0 ai client di visualizzare i menu di selezione delle scene. Il processo pu\u00f2 essere lento, usare molta CPU e pu\u00f2 richiedere diversi gigabyte di spazio. Funziona quando vengono trovati i video, e anche come compito programmato alle 04:00. Il programma \u00e8 configurabile nella sezione operazioni pianificate. Non \u00e8 consigliabile eseguire questa operazione durante le ore di massimo utilizzo.",
+    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "Lingua preferita per il download:",
     "ButtonAutoScroll": "Scorrimento automatico",
     "LabelImageSavingConvention": "Convenzione per il salvataggio di immagini:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Scarica sottotitoli per:",
     "MessageNoChapterProviders": "Installare un plugin provider capitoli come ChapterDb per attivare le opzioni capitolo aggiuntive.",
     "LabelSkipIfGraphicalSubsPresent": "Salta se il video contiene gi\u00e0 i sottotitoli grafici",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Mantenere le versioni testuali dei sottotitoli si tradurr\u00e0 in consegna pi\u00f9 efficiente ai client mobile.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
     "TabSubtitles": "Sottotitoli",
     "TabChapters": "capitoli",
     "HeaderDownloadChaptersFor": "Scarica i nomi dei capitoli per:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Info protocollo:",
     "LabelProtocolInfoHelp": "Il valore che verr\u00e0 utilizzato quando si risponde a richieste GetProtocolInfo dal dispositivo.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser include il supporto nativo per i metadati Kodi Nfo e immagini. Per attivare o disattivare i metadati Kodi, utilizzare la scheda Avanzate per configurare le opzioni per i tipi di media.",
+    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
     "LabelKodiMetadataUser": "Sincronizza i dati utente a nfo di per:",
-    "LabelKodiMetadataUserHelp": "Attivare questa opzione per mantenere i dati di orologi sincronizzati tra il Media Browser e Kodi.",
+    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
     "LabelKodiMetadataDateFormat": "Data di uscita Formato:",
     "LabelKodiMetadataDateFormatHelp": "Tutte le date all'interno del nfo verranno letti e scritti utilizzando questo formato.",
     "LabelKodiMetadataSaveImagePaths": "Salva percorsi delle immagini all'interno dei file NFO",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Esempio: srt",
     "ButtonLearnMore": "saperne di pi\u00f9",
     "TabPlayback": "Riproduzione",
-    "HeaderTrailersAndExtras": "Trailers & Extras",
-    "OptionFindTrailers": "Trova trailer da internet automaticamente",
     "HeaderLanguagePreferences": "Lingua preferita",
     "TabCinemaMode": "Modalit\u00e0 Cinema",
     "TitlePlayback": "Riproduzione",
