--- a/MediaBrowser.Server.Implementations/Localization/Server/nb.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nb.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Aktiver videobildet utvinning",
     "VideoImageExtractionHelp": "For videoer som ikke allerede har bilder, og at vi ikke klarer \u00e5 finne internettbilder for. Dette vil tilf\u00f8re noen ytterligere tid til den opprinnelige biblioteket s\u00f8king, men vil resultere i en mer tiltalende presentasjon.",
     "LabelEnableChapterImageExtractionForMovies": "Pakk ut kapittelbilde utvinning for Filmer",
-    "LabelChapterImageExtractionForMoviesHelp": "Utpakking i kapittelbilder vil tillate kunder \u00e5 vise grafiske scenevalgmenyer. Prosessen kan v\u00e6re treg, cpu-intensive og kan kreve flere Gigabyte med plass. Den kj\u00f8rer som en nattlig planlagt oppgave p\u00e5 04.00 AM, selv om dette er konfigurerbart i planlagte oppgaver omr\u00e5det. Det er ikke anbefalt \u00e5 kj\u00f8re denne oppgaven il\u00f8pet av toppbelastede timer.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Sl\u00e5 p\u00e5 automatisk port mapping",
     "LabelEnableAutomaticPortMappingHelp": "UPnP tillater automatiserte routere konfigurasjoner for enkel ekstern tilgang. Denne funksjonen s\u00f8ttes ikke av alle routere.",
     "HeaderTermsOfService": "Media Browser Vilk\u00e5r for Service",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Hvis aktivert vil nye bilder bli nedlastet automatisk n\u00e5r de blir lagt til i TheTVDB.com. Ekisterende bilder vil ikke bli erstattet.",
     "LabelFanartApiKey": "Personal api key:",
     "LabelFanartApiKeyHelp": "Requests to fanart without a personal API key return results that were approved over 7 days ago. With a personal API key that drops to 48 hours and if you are also a fanart VIP member that will further drop to around 10 minutes.",
-    "ExtractChapterImagesHelp": "Utpakking av kapittelbilder vil tillate kunder \u00e5 vise grafiske scenevalgmenyer. Prosessen kan v\u00e6re treg, cpu-intensive og kan kreve flere Gigabyte med plass. Det kj\u00f8rer n\u00e5r videoene blir oppdaget, og ogs\u00e5 som en nattlig planlagt oppgave p\u00e5 04.00 AM. Tidsplanen er konfigurerbart i planlagte oppgaver omr\u00e5det. Det er ikke anbefalt \u00e5 kj\u00f8re denne oppgaven ved  toppbelastede timer.",
+    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "Foretrukket nedlastingsspr\u00e5k:",
     "ButtonAutoScroll": "Auto-scroll",
     "LabelImageSavingConvention": "Bilde besparende konvensjon:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Last ned undertekster for:",
     "MessageNoChapterProviders": "Installer en kapittel tilbyder som eksempelvis ChapterDb for \u00e5 aktivere kapittel muligheter.",
     "LabelSkipIfGraphicalSubsPresent": "Hopp om videoen inneholder allerede grafiske undertekster",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Ved \u00e5 opprettholde tekst versjoner av undertekster vil medf\u00f8re i mer effektiv levering til mobile enheter.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
     "TabSubtitles": "Undertekster",
     "TabChapters": "Kapitler",
     "HeaderDownloadChaptersFor": "Last ned kapittelnavn for:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Protokoll info:",
     "LabelProtocolInfoHelp": "Verdien som blir brukt for \u00e5 gi respons til GetProtocolInfo foresp\u00f8rsler fra enheten.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser inkluderer innebygd st\u00f8tte for Kodi Nfo metadata og bilder. For \u00e5 aktivere eller deaktivere Kodi metadata, bruker du fanen Avansert for \u00e5 konfigurere alternativer for medietyper.",
+    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
     "LabelKodiMetadataUser": "Synk bruker sett data til nfo'er for:",
-    "LabelKodiMetadataUserHelp": "Aktiver dette for \u00e5 holde sett data i synk mellom Media Browser og Kodi.",
+    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
     "LabelKodiMetadataDateFormat": "Utgivelsesdato format:",
     "LabelKodiMetadataDateFormatHelp": "Alle datoer inenfor nfo'er vil bli lest og skrevet til med bruk av dette formatet.",
     "LabelKodiMetadataSaveImagePaths": "Lagre bilde stier inne i nfo filer",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Eksempel: srt",
     "ButtonLearnMore": "L\u00e6re mer",
     "TabPlayback": "Spill av",
-    "HeaderTrailersAndExtras": "Trailere & Ekstra",
-    "OptionFindTrailers": "Finn trailere fra internett automatisk",
     "HeaderLanguagePreferences": "Spr\u00e5kpreferanser",
     "TabCinemaMode": "Kino Mode",
     "TitlePlayback": "Spill av",
