--- a/MediaBrowser.Server.Implementations/Localization/Server/nl.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/nl.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Videobeeld uitpakken inschakelen",
     "VideoImageExtractionHelp": "Voor video's die nog geen afbeeldingen hebben, en waarvoor geen afbeeldingen op Internet te vinden zijn. Dit voegt extra tijd toe aan de oorspronkelijke bibliotheek scan, maar resulteert in een mooiere weergave.",
     "LabelEnableChapterImageExtractionForMovies": "Hoofdstuk afbeeldingen uitpakken voor Films",
-    "LabelChapterImageExtractionForMoviesHelp": "Uitpakken van hoofdstuk afbeeldingen geeft de Cli\u00ebnt de mogelijkheid om grafische scene selectie menu's te tonen. Het proces kan traag en cpu-intensief zijn en kan enkele gigabytes aan ruimte vereisen. Het word uitgevoerd als nachtelijke taak om 4:00, maar dit is instelbaar via de geplande taken. Het wordt niet aanbevolen om deze taak uit te voeren tijdens de piekuren.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Automatische poorttoewijzing inschakelen",
     "LabelEnableAutomaticPortMappingHelp": "UPnP zorgt voor geautomatiseerde configuratie van de router voor gemakkelijke toegang op afstand. Dit werkt mogelijk niet met sommige routers.",
     "HeaderTermsOfService": "Media Brower Service Voorwaarden",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Indien ingeschakeld, worden nieuwe afbeeldingen automatisch gedownload wanneer ze zijn toegevoegd aan TheTVDB.com. Bestaande afbeeldingen zullen niet worden vervangen.",
     "LabelFanartApiKey": "Persoonlijke api sleutel:",
     "LabelFanartApiKeyHelp": "Verzoeken om fanart zonder een persoonlijke API sleutel geven resultaten terug die meer dan 7 dagen geleden goedgekeurd zijn. Een persoonlijke API sleutel brengt dat terug tot 48 uur en als u ook een fanart VIP lid bent wordt dit tot 10 minuten teruggebracht.",
-    "ExtractChapterImagesHelp": "Uitpakken van hoofdstuk afbeeldingen geeft de cli\u00ebnt de mogelijkheid om grafische scene selectie menu's te tonen. Het proces kan traag en cpu-intensief zijn en kan enkele gigabytes aan ruimte vereisen. Het word uitgevoerd als nachtelijke taak om 4:00. Deze taak is in te stellen via de geplande taken. Het wordt niet aanbevolen om deze taak uit te voeren tijdens de piekuren.",
+    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "Voorkeurs taal:",
     "ButtonAutoScroll": "Auto-scroll",
     "LabelImageSavingConvention": "Afbeelding opslag conventie:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Download ondertiteling voor:",
     "MessageNoChapterProviders": "Installeer een hoofdstuk provider Plug-in zoals ChapterDb om extra hoofdstuk opties in te schakelen.",
     "LabelSkipIfGraphicalSubsPresent": "Overslaan als de video al grafische ondertitels  bevat",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Tekstversies houden van ondertitels zal resulteren in meer effici\u00ebnte levering aan mobiele clients.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
     "TabSubtitles": "Ondertiteling",
     "TabChapters": "Hoofdstukken",
     "HeaderDownloadChaptersFor": "Download hoofdstuk namen voor:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Protocol info:",
     "LabelProtocolInfoHelp": "De waarde die wordt gebruikt bij het reageren op GetProtocolInfo verzoeken van het apparaat.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser heeft standaard ondersteuning voor Kodi NFO metadata en afbeeldingen. Om Kodi metadata aan of uit te zetten gebruikt u het tabblad Geavanceerd om opties voor uw mediatypen te configureren.",
+    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
     "LabelKodiMetadataUser": "Synchroniseer gekeken informatie toe aan NFO's voor (gebruiker):",
-    "LabelKodiMetadataUserHelp": "Schakel in om gekeken informatie tussen Media Browser en Kodi te synchroniseren.",
+    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
     "LabelKodiMetadataDateFormat": "Uitgave datum formaat:",
     "LabelKodiMetadataDateFormatHelp": "Alle datums in NFO's zullen gelezen en geschreven worden met dit formaat.",
     "LabelKodiMetadataSaveImagePaths": "Bewaar afbeeldingspaden in NFO-bestanden",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Voorbeeld: srt",
     "ButtonLearnMore": "Meer informatie",
     "TabPlayback": "Afspelen",
-    "HeaderTrailersAndExtras": "Trailers & Extra's",
-    "OptionFindTrailers": "Vind trailers van het internet automatisch",
     "HeaderLanguagePreferences": "Taal voorkeuren",
     "TabCinemaMode": "Cinema mode",
     "TitlePlayback": "Afspelen",
