--- a/MediaBrowser.Server.Implementations/Localization/Server/sv.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/sv.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Ta fram bildrutor ur videofiler",
     "VideoImageExtractionHelp": "Dessa anv\u00e4nds f\u00f6r objekt som saknar bilder och d\u00e4r vi inte hittar n\u00e5gra vid s\u00f6kning p\u00e5 Internet. Detta g\u00f6r att den f\u00f6rsta genoms\u00f6kningen av biblioteket tar lite l\u00e4ngre tid, men ger en snyggare presentation.",
     "LabelEnableChapterImageExtractionForMovies": "Ta fram kapitelbildrutor ur filmfiler",
-    "LabelChapterImageExtractionForMoviesHelp": "Detta m\u00f6jligg\u00f6r grafisk visning av menyer f\u00f6r val av kapitel. Processen kan vara tids- och CPU-kr\u00e4vande och beh\u00f6va flera gigabyte lagringsutrymme. Processen k\u00f6rs varje natt kl 04:00 men intervallet kan anpassas enligt \u00f6nskem\u00e5l i Schemal\u00e4ggaren. Vi rekommenderar inte att den k\u00f6rs vid tider d\u00e5 anv\u00e4ndare \u00e4r aktiva.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Aktivera automatisk koppling av portar",
     "LabelEnableAutomaticPortMappingHelp": "UPnP m\u00f6jligg\u00f6r automatisk inst\u00e4llning av din router s\u00e5 att du enkelt kan n\u00e5 Media Browser fr\u00e5n Internet. Detta kanske inte fungerar med alla routrar.",
     "HeaderTermsOfService": "Media Browser Villkor",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Om aktiverat h\u00e4mtas nya bilder automatiskt efter hand som de blir tillg\u00e4ngliga p\u00e5 TheTVDB.com. Befintliga bilder p\u00e5verkas ej.",
     "LabelFanartApiKey": "Personlig api-nyckel:",
     "LabelFanartApiKeyHelp": "Requests to fanart without a personal API key return results that were approved over 7 days ago. With a personal API key that drops to 48 hours and if you are also a fanart VIP member that will further drop to around 10 minutes.",
-    "ExtractChapterImagesHelp": "Detta m\u00f6jligg\u00f6r grafisk visning av menyer f\u00f6r val av kapitel. Processen kan vara tids- och CPU-kr\u00e4vande och beh\u00f6va flera gigabyte lagringsutrymme. Processen k\u00f6rs varje natt kl 04:00 men intervallet kan anpassas enligt \u00f6nskem\u00e5l i Schemal\u00e4ggaren. Vi rekommenderar inte att den k\u00f6rs vid tider d\u00e5 anv\u00e4ndare \u00e4r aktiva.",
+    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "\u00d6nskat spr\u00e5k:",
     "ButtonAutoScroll": "Rulla listor automatiskt",
     "LabelImageSavingConvention": "Namngivningsformat f\u00f6r bilder:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Ladda ner undertexter f\u00f6r:",
     "MessageNoChapterProviders": "Installera ett kapiteltill\u00e4gg s\u00e5som ChapterDb f\u00f6r att ge fler kapitelfunktioner.",
     "LabelSkipIfGraphicalSubsPresent": "Hoppa \u00f6ver om videon redan inneh\u00e5ller grafiska undertexter",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Om du sparar textversioner av undertexterna f\u00e5r du ett b\u00e4ttre resultat vid anv\u00e4ndning av mobila enheter.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
     "TabSubtitles": "Undertexter",
     "TabChapters": "Kapitel",
     "HeaderDownloadChaptersFor": "H\u00e4mta kapitelnamn f\u00f6r:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Protokollinfo:",
     "LabelProtocolInfoHelp": "V\u00e4rde att anv\u00e4nda vid svar p\u00e5 GetProtocolInfo-beg\u00e4ran fr\u00e5n enheter.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser har inbyggt st\u00f6d f\u00f6r Kodi Nfo-metadata och bilder. F\u00f6r att aktivera eller avaktivera Kodi-metadata, anv\u00e4nd \"Avancerat\"-fliken f\u00f6r att g\u00f6ra inst\u00e4llningar f\u00f6r olika mediatyper.",
+    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
     "LabelKodiMetadataUser": "Sync user watch data to nfo's for:",
-    "LabelKodiMetadataUserHelp": "Aktivera detta f\u00f6r att synkronisera bevakade data mellan Media Browser och Kodi.",
+    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
     "LabelKodiMetadataDateFormat": "Format f\u00f6r premi\u00e4rdatum:",
     "LabelKodiMetadataDateFormatHelp": "Alla datum i nfo-filer kommer att l\u00e4sas och skrivas i detta format.",
     "LabelKodiMetadataSaveImagePaths": "Spara bilds\u00f6kv\u00e4gar i nfo-filer",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Exempel:srt",
     "ButtonLearnMore": "L\u00e4s mer",
     "TabPlayback": "Uppspelning",
-    "HeaderTrailersAndExtras": "Trailers och extramaterial",
-    "OptionFindTrailers": "S\u00f6k automatiskt p\u00e5 Internet efter trailers",
     "HeaderLanguagePreferences": "Spr\u00e5kinst\u00e4llningar",
     "TabCinemaMode": "Biol\u00e4ge",
     "TitlePlayback": "Uppspelning",
