--- a/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/zh_CN.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "\u542f\u7528\u89c6\u9891\u622a\u56fe\u529f\u80fd",
     "VideoImageExtractionHelp": "\u5bf9\u4e8e\u8fd8\u6ca1\u6709\u56fe\u7247\uff0c\u4ee5\u53ca\u6211\u4eec\u65e0\u6cd5\u627e\u5230\u7f51\u7edc\u56fe\u7247\u7684\u89c6\u9891\u3002\u8fd9\u4f1a\u989d\u5916\u589e\u52a0\u4e00\u4e9b\u521d\u59cb\u5316\u5a92\u4f53\u5e93\u7684\u626b\u63cf\u65f6\u95f4\uff0c\u4f46\u4f1a\u4f7f\u5a92\u4f53\u4ecb\u7ecd\u754c\u9762\u66f4\u52a0\u8d4f\u5fc3\u60a6\u76ee\u3002",
     "LabelEnableChapterImageExtractionForMovies": "\u622a\u53d6\u7535\u5f71\u7ae0\u8282\u56fe\u7247",
-    "LabelChapterImageExtractionForMoviesHelp": "\u4ece\u7ae0\u8282\u4e2d\u63d0\u53d6\u7684\u56fe\u7247\u5c06\u5141\u8bb8\u5ba2\u6237\u7aef\u663e\u793a\u56fe\u5f62\u9009\u62e9\u83dc\u5355\u3002\u8fd9\u4e2a\u8fc7\u7a0b\u53ef\u80fd\u4f1a\u5f88\u6162\uff0c \u66f4\u591a\u7684\u5360\u7528CPU\u8d44\u6e90\uff0c\u5e76\u4e14\u4f1a\u9700\u8981\u51e0\u4e2aGB\u7684\u786c\u76d8\u7a7a\u95f4\u3002\u5b83\u88ab\u9ed8\u8ba4\u8bbe\u7f6e\u4e8e\u6bcf\u665a\u51cc\u66684\u70b9\u8fd0\u884c\uff0c\u867d\u7136\u8fd9\u53ef\u4ee5\u5728\u8ba1\u5212\u4efb\u52a1\u4e2d\u914d\u7f6e\uff0c\u4f46\u6211\u4eec\u4e0d\u5efa\u8bae\u5728\u9ad8\u5cf0\u4f7f\u7528\u65f6\u95f4\u8fd0\u884c\u8be5\u4efb\u52a1\u3002",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "\u542f\u7528\u81ea\u52a8\u7aef\u53e3\u6620\u5c04",
     "LabelEnableAutomaticPortMappingHelp": "UPNP\u5141\u8bb8\u81ea\u52a8\u8def\u7531\u5668\u914d\u7f6e\uff0c\u4ece\u800c\u66f4\u65b9\u4fbf\u7684\u8fdb\u884c\u8fdc\u7a0b\u8bbf\u95ee\u3002\u4f46\u8fd9\u53ef\u80fd\u4e0d\u9002\u7528\u4e8e\u67d0\u4e9b\u578b\u53f7\u7684\u8def\u7531\u5668\u3002",
     "HeaderTermsOfService": "Media Browser\u670d\u52a1\u6761\u6b3e",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "\u5982\u679c\u542f\u7528\uff0c\u4e00\u65e6\u6709\u65b0\u7684\u56fe\u50cf\u6dfb\u52a0\u5230TheTVDB.com\u4e0a\uff0c\u5b83\u4eec\u5c06\u88ab\u81ea\u52a8\u4e0b\u8f7d\u3002\u73b0\u6709\u7684\u56fe\u50cf\u4e0d\u4f1a\u88ab\u53d6\u4ee3\u3002",
     "LabelFanartApiKey": "Personal api key:",
     "LabelFanartApiKeyHelp": "Requests to fanart without a personal API key return results that were approved over 7 days ago. With a personal API key that drops to 48 hours and if you are also a fanart VIP member that will further drop to around 10 minutes.",
-    "ExtractChapterImagesHelp": "\u4ece\u7ae0\u8282\u4e2d\u63d0\u53d6\u7684\u56fe\u7247\u5c06\u5141\u8bb8\u5ba2\u6237\u7aef\u663e\u793a\u56fe\u5f62\u9009\u62e9\u83dc\u5355\u3002\u8fd9\u4e2a\u8fc7\u7a0b\u53ef\u80fd\u4f1a\u5f88\u6162\uff0c \u66f4\u591a\u7684\u5360\u7528CPU\u8d44\u6e90\uff0c\u5e76\u4e14\u4f1a\u9700\u8981\u51e0\u4e2aGB\u7684\u786c\u76d8\u7a7a\u95f4\u3002\u5b83\u88ab\u9ed8\u8ba4\u8bbe\u7f6e\u4e8e\u6bcf\u665a\u51cc\u66684\u70b9\u8fd0\u884c\uff0c\u867d\u7136\u8fd9\u53ef\u4ee5\u5728\u8ba1\u5212\u4efb\u52a1\u4e2d\u914d\u7f6e\uff0c\u4f46\u6211\u4eec\u4e0d\u5efa\u8bae\u5728\u9ad8\u5cf0\u4f7f\u7528\u65f6\u95f4\u8fd0\u884c\u8be5\u4efb\u52a1\u3002",
+    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "\u9996\u9009\u4e0b\u8f7d\u8bed\u8a00\uff1a",
     "ButtonAutoScroll": "\u81ea\u52a8\u6eda\u52a8",
     "LabelImageSavingConvention": "\u56fe\u7247\u4fdd\u5b58\u547d\u540d\u89c4\u5219",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "\u4e0b\u8f7d\u54ea\u4e00\u9879\u7684\u5b57\u5e55\uff1a",
     "MessageNoChapterProviders": "\u5b89\u88c5\u4e00\u4e2a\u7ae0\u8282\u63d0\u4f9b\u8005\u7684\u63d2\u4ef6\uff0c\u4f8b\u5982ChapterDb\u3002\u4ee5\u4fbf\u542f\u7528\u989d\u5916\u7684\u7ae0\u8282\u9009\u9879\u3002",
     "LabelSkipIfGraphicalSubsPresent": "\u5982\u679c\u89c6\u9891\u5df2\u7ecf\u5305\u542b\u56fe\u5f62\u5b57\u5e55\u5219\u8df3\u8fc7",
-    "LabelSkipIfGraphicalSubsPresentHelp": "\u4fdd\u7559\u6587\u672c\u7248\u5b57\u5e55\u5c06\u66f4\u6709\u6548\u5730\u63d0\u4f9b\u7ed9\u79fb\u52a8\u5ba2\u6237\u7aef\u3002",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
     "TabSubtitles": "\u5b57\u5e55",
     "TabChapters": "\u7ae0\u8282",
     "HeaderDownloadChaptersFor": "\u4e0b\u8f7d\u7ae0\u8282\u540d\u79f0\uff1a",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "\u534f\u8bae\u4fe1\u606f\uff1a",
     "LabelProtocolInfoHelp": "\u5f53\u54cd\u5e94\u6765\u81ea\u8bbe\u5907\u7684 GetProtocolInfo\uff08\u83b7\u53d6\u534f\u8bae\u4fe1\u606f\uff09\u8bf7\u6c42\u65f6\uff0c\u8be5\u503c\u5c06\u88ab\u4f7f\u7528\u3002",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser\u5305\u542b\u4e86\u5bf9Kodi Nfo \u5a92\u4f53\u8d44\u6599\u548c\u56fe\u50cf\u7684\u539f\u751f\u652f\u6301\u3002\u8981\u542f\u7528\u6216\u7981\u7528Kodi \u5a92\u4f53\u8d44\u6599\uff0c\u4f7f\u7528\u9ad8\u7ea7\u9009\u9879\u5361\u6765\u4e3a\u60a8\u7684\u5a92\u4f53\u7c7b\u578b\u914d\u7f6e\u9009\u9879\u3002",
+    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
     "LabelKodiMetadataUser": "\u540c\u6b65\u7528\u6237\u7684\u89c2\u770b\u65e5\u671f\u5230nfo\u6587\u4ef6:",
-    "LabelKodiMetadataUserHelp": "\u542f\u7528\u6b64\u9879\u4fdd\u6301\u89c2\u770b\u65e5\u671f\u80fd\u5728 Media Browser \u548c Kodi \u4e4b\u95f4\u540c\u6b65\u3002",
+    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
     "LabelKodiMetadataDateFormat": "\u53d1\u884c\u65e5\u671f\u683c\u5f0f\uff1a",
     "LabelKodiMetadataDateFormatHelp": "Nfo\u7684\u6240\u6709\u65e5\u671f\u5c06\u4f7f\u7528\u8fd9\u79cd\u683c\u5f0f\u88ab\u8bfb\u53d6\u548c\u5199\u5165\u3002",
     "LabelKodiMetadataSaveImagePaths": "\u4fdd\u5b58\u56fe\u50cf\u8def\u5f84\u5728NFO\u6587\u4ef6",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "\u4f8b\u5982\uff1aSRT",
     "ButtonLearnMore": "\u4e86\u89e3\u66f4\u591a",
     "TabPlayback": "\u64ad\u653e",
-    "HeaderTrailersAndExtras": "\u9884\u544a\u7247\u548c\u6f14\u5458",
-    "OptionFindTrailers": "\u81ea\u52a8\u4ece\u4e92\u8054\u7f51\u5bfb\u627e\u9884\u544a\u7247",
     "HeaderLanguagePreferences": "\u8bed\u8a00\u504f\u597d",
     "TabCinemaMode": "\u5f71\u9662\u6a21\u5f0f",
     "TitlePlayback": "\u64ad\u653e",
