--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/es_MX.json
@@ -672,7 +672,7 @@
     "MessageForgotPasswordFileCreated": "El siguiente archivo fue creado en tu servidor y contiene instrucciones de como proceder.",
     "MessageForgotPasswordFileExpiration": "El pin de restablecimiento expirara en {0}.",
     "MessageInvalidForgotPasswordPin": "Se introdujo un pin expirado o invalido. Por favor intente de nuevo.",
-    "MessagePasswordResetForUsers": "Las contrase\u00f1as se han restablecido para los siguientes usuarios:",
+    "MessagePasswordResetForUsers": "Passwords have been removed for the following users:",
     "HeaderInviteGuest": "Agregar un Invitado",
     "ButtonLinkMyMediaBrowserAccount": "Enlazar mi cuenta ahora",
     "MessageConnectAccountRequiredToInviteGuest": "Para poder agregar invitados primero necesitas vincular tu cuenta de Media Browser a este servidor.",
