--- a/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
+++ b/MediaBrowser.Server.Implementations/Localization/JavaScript/fr.json
@@ -672,7 +672,7 @@
     "MessageForgotPasswordFileCreated": "Le fichier suivant a \u00e9t\u00e9 cr\u00e9\u00e9 sur votre serveur et contient les instructions et la proc\u00e9dure \u00e0 suivre.",
     "MessageForgotPasswordFileExpiration": "Le code PIN de r\u00e9initialisation expirera \u00e0 {0}.",
     "MessageInvalidForgotPasswordPin": "Le code PIN est invalide ou a expir\u00e9. Veuillez r\u00e9essayer.",
-    "MessagePasswordResetForUsers": "Les mot de passes ont \u00e9t\u00e9 r\u00e9initialis\u00e9s pour les utilisateurs suivants :",
+    "MessagePasswordResetForUsers": "Les mot de passes ont \u00e9t\u00e9 supprim\u00e9s pour les utilisateurs suivants :",
     "HeaderInviteGuest": "Inviter une personne",
     "ButtonLinkMyMediaBrowserAccount": "Lier \u00e0 mon compte maintenant",
     "MessageConnectAccountRequiredToInviteGuest": "Pour inviter des personnes, vous devez d'abord lier votre compte Media Browser \u00e0 ce serveur.",
