--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_BR.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Ativar extra\u00e7\u00e3o de imagens de v\u00eddeo",
     "VideoImageExtractionHelp": "Para v\u00eddeos que n\u00e3o tenham imagens e que n\u00e3o possamos encontrar imagens na internet. Isto aumentar\u00e1 o tempo do rastreamento inicial da biblioteca mas resultar\u00e1 em uma apresenta\u00e7\u00e3o mais bonita.",
     "LabelEnableChapterImageExtractionForMovies": "Extrair imagens de cap\u00edtulos dos Filmes",
-    "LabelChapterImageExtractionForMoviesHelp": "Extrair imagens de cap\u00edtulos permitir\u00e1 aos clientes exibir menus gr\u00e1ficos de sele\u00e7\u00e3o de cenas. O processo pode ser lento, ocasionar uso intensivo de cpu e pode exigir bastante espa\u00e7o em disco. Ele ser\u00e1 executado \u00e0s 4:00hs, embora isto possa ser configur\u00e1vel na \u00e1rea de tarefas agendadas. N\u00e3o \u00e9 recomendado executar esta tarefa durante as horas de pico de uso.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extrair imagens de cap\u00edtulos permitir\u00e1 aos clientes exibir menus gr\u00e1ficos de sele\u00e7\u00e3o de cenas. O processo pode ser lento, ocasionar uso intensivo de cpu e pode exigir bastante espa\u00e7o em disco. Ele ser\u00e1 executado como uma tarefa noturna, embora isto possa ser configur\u00e1vel na \u00e1rea de tarefas agendadas. N\u00e3o \u00e9 recomendado executar esta tarefa durante as horas de pico de uso.",
     "LabelEnableAutomaticPortMapping": "Ativar mapeamento de porta autom\u00e1tico",
     "LabelEnableAutomaticPortMappingHelp": "UPnP permite uma configura\u00e7\u00e3o automatizada do roteador para acesso remoto f\u00e1cil. Isto pode n\u00e3o funcionar em alguns modelos de roteadores.",
     "HeaderTermsOfService": "Termos de Servi\u00e7o do Media Browser",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Se ativado, novas imagens ser\u00e3o automaticamente baixadas ao serem adicionadas ao TheTVDB.com. As Imagens atuais n\u00e3o ser\u00e3o substitu\u00eddas.",
     "LabelFanartApiKey": "Chave de api pessoal:",
     "LabelFanartApiKeyHelp": "Solicita\u00e7\u00f5es para fanart sem uma chave de API pessoal retornar\u00e3o resultados que foram aprovados h\u00e1 mais de 7 dias atr\u00e1s. Com uma chave de API pessoal isso diminui para 48 horas e se voc\u00ea for um membro VIP da fanart, isso diminuir\u00e1 para 10 minutos.",
-    "ExtractChapterImagesHelp": "Extrair imagens de cap\u00edtulos permitir\u00e1 aos clientes exibir menus gr\u00e1ficos de sele\u00e7\u00e3o de cenas. O processo pode ser lento, demandar uso intensivo de cpu e pode exigir bastante espa\u00e7o em disco. Ele ser\u00e1 executado quando os v\u00eddeos forem descobertos e tamb\u00e9m como uma tarefa agendada executada \u00e0s 4 da manh\u00e3. O agendamento pode ser configurado na \u00e1rea de tarefas agendadas. N\u00e3o \u00e9 recomendado executar esta tarefa durante as horas de pico de uso.",
+    "ExtractChapterImagesHelp": "Extrair imagens de cap\u00edtulos permitir\u00e1 aos clientes exibir menus gr\u00e1ficos de sele\u00e7\u00e3o de cenas. O processo pode ser lento, demandar uso intensivo de cpu e pode exigir bastante espa\u00e7o em disco. Ele ser\u00e1 executado quando os v\u00eddeos forem descobertos e tamb\u00e9m como uma tarefa noturna. O agendamento pode ser configurado na \u00e1rea de tarefas agendadas. N\u00e3o \u00e9 recomendado executar esta tarefa durante as horas de pico de uso.",
     "LabelMetadataDownloadLanguage": "Idioma preferido para download:",
     "ButtonAutoScroll": "Auto-rolagem",
     "LabelImageSavingConvention": "Conven\u00e7\u00e3o para salvar a imagem:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Fazer download de legendas para:",
     "MessageNoChapterProviders": "Instale um plugin provedor de cap\u00edtulos como o ChapterDb para habilitar mais op\u00e7\u00f5es de cap\u00edtulos.",
     "LabelSkipIfGraphicalSubsPresent": "Ignorar se o v\u00eddeo j\u00e1 possuir legendas gr\u00e1ficas",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Manter vers\u00f5es das legendas em texto resultar\u00e1 em uma entrega mais eficiente para os clientes m\u00f3veis.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Manter vers\u00f5es das legendas em texto resultar\u00e1 em uma entrega mais eficiente e diminuir\u00e1 a necessidade de transcodifica\u00e7\u00e3o do v\u00eddeo.",
     "TabSubtitles": "Legendas",
     "TabChapters": "Cap\u00edtulos",
     "HeaderDownloadChaptersFor": "Fazer download de nomes de cap\u00edtulos para:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Informa\u00e7\u00e3o do protocolo:",
     "LabelProtocolInfoHelp": "O valor que ser\u00e1 usado ao responder os pedidos GetProtocolInfo do dispositivo.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "O Media Browser inclui suporte nativo aos metadados e imagens Nfo do Kodi. Para ativar ou desativar os metadados do Kodi, use a aba Avan\u00e7ado e configure as op\u00e7\u00f5es dos seus tipos de m\u00eddia.",
+    "HeaderKodiMetadataHelp": "O Media Browser inclui suporte nativo para arquivos de metadados Nfo. Para ativar ou desativar os metadados Nfo, use a aba Avan\u00e7ado e configure as op\u00e7\u00f5es dos seus tipos de m\u00eddia.",
     "LabelKodiMetadataUser": "Sincronizar informa\u00e7\u00f5es do que o usu\u00e1rio assiste aos nfo's para:",
-    "LabelKodiMetadataUserHelp": "Ativar esta op\u00e7\u00e3o para manter os dados sincronizados entre o Media Browser e o Kodi.",
+    "LabelKodiMetadataUserHelp": "Ative esta op\u00e7\u00e3o para manter os dados em sincronia entre o Media Browser e arquivos Nfo.",
     "LabelKodiMetadataDateFormat": "Formato da data de lan\u00e7amento:",
     "LabelKodiMetadataDateFormatHelp": "Todas as datas dentro dos nfo's ser\u00e3o lidas e gravadas usando este formato.",
     "LabelKodiMetadataSaveImagePaths": "Salvar o caminho das imagens dentro dos arquivos nfo's",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Exemplo: srt",
     "ButtonLearnMore": "Saiba mais",
     "TabPlayback": "Reprodu\u00e7\u00e3o",
-    "HeaderTrailersAndExtras": "Trailers & Extras",
-    "OptionFindTrailers": "Encontrar trailers na internet automaticamente",
     "HeaderLanguagePreferences": "Prefer\u00eancias de Idioma",
     "TabCinemaMode": "Modo Cinema",
     "TitlePlayback": "Reprodu\u00e7\u00e3o",
