--- a/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/pt_PT.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Activar extrac\u00e7\u00e3o de imagens dos v\u00eddeos.",
     "VideoImageExtractionHelp": "Para os v\u00eddeos ainda sem imagens e que n\u00e3o se encontram imagens na internet. Esta funcionalidade vai acrescentar mais algum tempo na leitura inicial da biblioteca, mas resultar\u00e1 numa apresenta\u00e7\u00e3o melhorada,",
     "LabelEnableChapterImageExtractionForMovies": "Extrair imagens dos cap\u00edtulos dos Filmes",
-    "LabelChapterImageExtractionForMoviesHelp": "Extrair imagens dos cap\u00edtulos permite, \u00e0s aplica\u00e7\u00f5es clientes, apresentar menus de selec\u00e7\u00e3o de cap\u00edtulos com cenas. Este processo pode ser lento, intensivo para o CPU e pode requerer v\u00e1rios gigabytes de espa\u00e7o. Corre como um servi\u00e7o nocturno, agendado para as 04h, embora possa ser configurado na \u00e1rea de Tarefas Agendadas. N\u00e3o \u00e9 recomendado correr esta tarefa em horas que haja muita utiliza\u00e7\u00e3o.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Activar mapeamento autom\u00e1tico de portas",
     "LabelEnableAutomaticPortMappingHelp": "UPnP permite configurar automaticamente o router, para um acesso remoto mais facilitado. Pode n\u00e3o suportar todos os modelos de routers.",
     "HeaderTermsOfService": "Media Browser Terms of Service",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "Se ativado, novas imagens ser\u00e3o automaticamente transferidas ao serem adicionadas ao TheTVDB.com. As imagens existentes n\u00e3o ser\u00e3o substitu\u00eddas.",
     "LabelFanartApiKey": "Personal api key:",
     "LabelFanartApiKeyHelp": "Requests to fanart without a personal API key return results that were approved over 7 days ago. With a personal API key that drops to 48 hours and if you are also a fanart VIP member that will further drop to around 10 minutes.",
-    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task at 4am. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "Preferred download language:",
     "ButtonAutoScroll": "Scroll autom\u00e1tico",
     "LabelImageSavingConvention": "Conven\u00e7\u00e3o para guardar imagens:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Transferir legendas para:",
     "MessageNoChapterProviders": "Install a chapter provider plugin such as ChapterDb to enable additional chapter options.",
     "LabelSkipIfGraphicalSubsPresent": "Skip if the video already contains graphical subtitles",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery to mobile clients.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
     "TabSubtitles": "Legendas",
     "TabChapters": "Chapters",
     "HeaderDownloadChaptersFor": "Download chapter names for:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Protocol info:",
     "LabelProtocolInfoHelp": "The value that will be used when responding to GetProtocolInfo requests from the device.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser includes native support for Kodi Nfo metadata and images. To enable or disable Kodi metadata, use the Advanced tab to configure options for your media types.",
+    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
     "LabelKodiMetadataUser": "Sync user watch data to nfo's for:",
-    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Kodi.",
+    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
     "LabelKodiMetadataDateFormat": "Release date format:",
     "LabelKodiMetadataDateFormatHelp": "All dates within nfo's will be read and written to using this format.",
     "LabelKodiMetadataSaveImagePaths": "Save image paths within nfo files",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Example: srt",
     "ButtonLearnMore": "Learn more",
     "TabPlayback": "Playback",
-    "HeaderTrailersAndExtras": "Trailers & Extras",
-    "OptionFindTrailers": "Find trailers from the internet automatically",
     "HeaderLanguagePreferences": "Language Preferences",
     "TabCinemaMode": "Cinema Mode",
     "TitlePlayback": "Playback",
