--- a/MediaBrowser.Server.Implementations/Localization/Server/uk.json
+++ b/MediaBrowser.Server.Implementations/Localization/Server/uk.json
@@ -32,7 +32,7 @@
     "LabelEnableVideoImageExtraction": "Enable video image extraction",
     "VideoImageExtractionHelp": "For videos that don't already have images, and that we're unable to find internet images for. This will add some additional time to the initial library scan but will result in a more pleasing presentation.",
     "LabelEnableChapterImageExtractionForMovies": "Extract chapter image extraction for Movies",
-    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task at 4am, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "LabelChapterImageExtractionForMoviesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs as a nightly scheduled task, although this is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelEnableAutomaticPortMapping": "Enable automatic port mapping",
     "LabelEnableAutomaticPortMappingHelp": "UPnP allows automated router configuration for easy remote access. This may not work with some router models.",
     "HeaderTermsOfService": "Media Browser Terms of Service",
@@ -346,7 +346,7 @@
     "LabelAutomaticUpdatesTvdbHelp": "If enabled, new images will be downloaded automatically as they're added to TheTVDB.com. Existing images will not be replaced.",
     "LabelFanartApiKey": "Personal api key:",
     "LabelFanartApiKeyHelp": "Requests to fanart without a personal API key return results that were approved over 7 days ago. With a personal API key that drops to 48 hours and if you are also a fanart VIP member that will further drop to around 10 minutes.",
-    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task at 4am. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
+    "ExtractChapterImagesHelp": "Extracting chapter images will allow clients to display graphical scene selection menus. The process can be slow, cpu-intensive and may require several gigabytes of space. It runs when videos are discovered, and also as a nightly scheduled task. The schedule is configurable in the scheduled tasks area. It is not recommended to run this task during peak usage hours.",
     "LabelMetadataDownloadLanguage": "Preferred download language:",
     "ButtonAutoScroll": "Auto-scroll",
     "LabelImageSavingConvention": "Image saving convention:",
@@ -818,7 +818,7 @@
     "HeaderDownloadSubtitlesFor": "Download subtitles for:",
     "MessageNoChapterProviders": "Install a chapter provider plugin such as ChapterDb to enable additional chapter options.",
     "LabelSkipIfGraphicalSubsPresent": "Skip if the video already contains graphical subtitles",
-    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery to mobile clients.",
+    "LabelSkipIfGraphicalSubsPresentHelp": "Keeping text versions of subtitles will result in more efficient delivery and decrease the likelihood of video transcoding.",
     "TabSubtitles": "Subtitles",
     "TabChapters": "Chapters",
     "HeaderDownloadChaptersFor": "Download chapter names for:",
@@ -953,9 +953,9 @@
     "LabelProtocolInfo": "Protocol info:",
     "LabelProtocolInfoHelp": "The value that will be used when responding to GetProtocolInfo requests from the device.",
     "TabNfo": "Nfo",
-    "HeaderKodiMetadataHelp": "Media Browser includes native support for Kodi Nfo metadata and images. To enable or disable Kodi metadata, use the Advanced tab to configure options for your media types.",
+    "HeaderKodiMetadataHelp": "Media Browser includes native support for Nfo metadata files. To enable or disable Nfo metadata, use the Advanced tab to configure options for your media types.",
     "LabelKodiMetadataUser": "Sync user watch data to nfo's for:",
-    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Kodi.",
+    "LabelKodiMetadataUserHelp": "Enable this to keep watch data in sync between Media Browser and Nfo files.",
     "LabelKodiMetadataDateFormat": "Release date format:",
     "LabelKodiMetadataDateFormatHelp": "All dates within nfo's will be read and written to using this format.",
     "LabelKodiMetadataSaveImagePaths": "Save image paths within nfo files",
@@ -1249,8 +1249,6 @@
     "LabelSubtitleFormatHelp": "Example: srt",
     "ButtonLearnMore": "Learn more",
     "TabPlayback": "Playback",
-    "HeaderTrailersAndExtras": "Trailers & Extras",
-    "OptionFindTrailers": "Find trailers from the internet automatically",
     "HeaderLanguagePreferences": "Language Preferences",
     "TabCinemaMode": "Cinema Mode",
     "TitlePlayback": "Playback",
